Fix CopyMemory test